--- a/client/src/renderer/src/assets/scrollbar.css
+++ b/client/src/renderer/src/assets/scrollbar.css
@@ -13,3 +13,9 @@ background: #888;
 ::-webkit-scrollbar-thumb:hover {
 background: #555;
 }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
